# aoc-old

./: AdventOfCode.sln  AdventOfCode2018.sln  README.md
AdventOfCode2018/: AdventOfCode2018.csproj  Day1.cs  Day1.txt  Day10.cs  Day10.txt  Day11.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day5.txt  Day6.cs  Day7.cs  Day8.cs  Day8.txt  ISolution.cs  Point.cs  Program.cs  Rectangle.cs
AoC2019/: AoC2019.csproj  Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day1.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day2.cs  Day3.cs  Day3.txt  Day4.cs  Day4.txt  Day5.cs  Day5.txt  Day6.cs  Day7.cs  Program.cs
AoC2020/: AoC2020.csproj  ArrayExtensions.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  (+13 more)
rust/autokey/: Cargo.toml
rust/autokey/src/: lib.rs
rust/keys/: Cargo.toml
rust/keys/src/: lib.rs
rust/runner/: Cargo.toml
rust/runner/src/: main.rs  solution.rs
rust/solutions/: Cargo.toml
rust/solutions/src/: lib.rs  template.rs  util.rs
rust/solutions/src/aoc2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
rust/solutions/src/aoc2016/: day01.rs  day02.rs  day03.rs  day04.rs
rust/solutions/src/aoc2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs
rust/solutions/src/aoc2021/etc/: bad-day20.rs
rust/solutions/src/util/: mod.rs
(+63 files in other folders)
