[package]
name = "autokey"
version = "0.1.0"
authors = ["Philipp Lange <narvius@gmail.com>"]
edition = "2018"
description = "A proc-macro to de-cruft writing solutions to Advent of Code puzzles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
keys = { path = "../keys" }