[package]
name = "keys"
version = "0.1.2021"
authors = ["Philipp Lange <narvius@gmail.com>"]
edition = "2021"
description = "An indexing datatype for the space of Advent of Code solutions."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
enum-iterator = "0.7"
num_enum = "0.5.4"