[package]
name = "runner"
version = "1.1.0"
authors = ["Philipp Lange <narvius@gmail.com>"]
edition = "2021"
description = "Command line-based runner for Advent of Code solutions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
keys = { path = "../keys" }
solutions = { path = "../solutions" }